# connectlife-ha

./: .gitignore  .gitmodules  025-1wj090728v0w.yaml  AGENTS.md  CLAUDE.md  DEVELOP.md  DEVELOPMENT.md  DEVICES.md  README.md  hacs.json  pyproject.toml
.claude/skills/bump-version/: SKILL.md
.claude/skills/release-notes/: SKILL.md
.claude/skills/update-translations/: CONVENTIONS.md  SKILL.md  glossary.json
.claude/skills/update-translations/scripts/: check_name_units.py  extract_todo.py  merge_translations.py
.claude/skills/update-translations/workflows/: README.md  review.js  translate.js
.github/workflows/: hassfest.yaml  validate-ha.yaml  validate-hacs.yaml  validate.yaml
custom_components/connectlife/: __init__.py  api.py  binary_sensor.py  button.py  client.py  climate.py  config_flow.py  const.py  coordinator.py  dictionaries.py  entity.py  humidifier.py  icons.json  manifest.json  messages.py  number.py  repairs.py  select.py  sensor.py  services.py  services.yaml  statistics_sources.py  strings.json  switch.py  temperature.py  utils.py  water_heater.py
custom_components/connectlife/data_dictionaries/: 003-000.yaml  003.yaml  004-000.yaml  004.yaml  006-200.yaml  006-201.yaml  006-299.yaml  006.yaml  007-400.yaml  007-401.yaml  007-402.yaml  007-406.yaml  007-407.yaml  007-408.yaml  007-499.yaml  007.yaml  008-301.yaml  008-303.yaml  008-304.yaml  008-305.yaml  008-399.yaml  008.yaml  009-100.yaml  009-102.yaml  009-104.yaml  009-105.yaml  009-106.yaml  009-107.yaml  009-108.yaml  009-109.yaml  009-112.yaml  009-117.yaml  009-122.yaml  009-125.yaml  009-126.yaml  009-127.yaml  009-128.yaml  009-129.yaml  009-19901.yaml  009.yaml  (+81 more)
custom_components/connectlife/translations/: de.json  en.json  es.json  fr.json  it.json  nl.json  no.json
scripts/: check_translations.py  gen_strings.py  sort_translations.py  validate_mappings.py
tests/: conftest.py  test_api.py  test_climate.py  test_dictionaries.py  test_messages.py  test_statistics.py
