[project]
name = "connectlife-ha"
version = "0.33.0"
description = "Custom Home Assistant component for ConnectLife devices"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "connectlife==0.7.1",
]

[dependency-groups]
dev = [
    "jschon==0.11.1",
    "pyyaml>=6.0.2",
    "pyright>=1.1.391",
    "homeassistant-stubs>=2024.12.0",
    "pytest-homeassistant-custom-component==0.13.190",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.pyright]
pythonVersion = "3.13"
include = ["custom_components/connectlife"]
typeCheckingMode = "basic"
